logstash.yaml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: apache-log-pipeline
spec:
  template:
    metadata:
      labels:
        app: apache-log-pipeline
    spec:
      hostname: apache-log-pipeline
      containers:
      - name: apache-log-pipeline
        ports:
          - containerPort: 5044
            name: filebeat
          - containerPort: 9600
            name: logstash
        image: docker.elastic.co/logstash/logstash:7.0.0
        volumeMounts:
        - name: apache-log-pipeline-config
          mountPath: /usr/share/logstash/pipeline/
        - name: logstash-config
          mountPath: /usr/share/logstash/config/
        command:
        - logstash
      volumes:
      - name: apache-log-pipeline-config
        configMap:
          name: apache-log-pipeline
          items:
          - key: apache.conf
            path: apache.conf
      - name: logstash-config
        configMap:
          name: logstash-config
          items:
          - key: logstash.yml
            path: logstash.yml
          items:
          - key: pipelines.yml
            path: pipelines.yml
---

kind: Service
apiVersion: v1
metadata:
  name: apache-log-pipeline
spec:
  type: NodePort
  selector:
    app: apache-log-pipeline
  ports:
  - protocol: TCP
    port: 5044
    targetPort: 5044
    nodePort: 30102
    name: filebeat
  - protocol: TCP
    port: 9600
    targetPort: 9600
    name: logstash
