svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-loadbalancer
spec:
  selector:
    app: es-cluster
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  type: LoadBalancer
