ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
spec:
  backend:
    serviceName: elasticsearch-cluster
    servicePort: 9200
